<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_large"
    android:background="@color/background_light">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/constraint_layout"
        android:textSize="@dimen/text_size_large"
        android:textColor="@color/purple_500"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/padding_medium"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:padding="@dimen/padding_medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        android:layout_marginTop="@dimen/padding_large"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email"
        android:padding="@dimen/padding_medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etName"
        android:layout_marginTop="@dimen/padding_medium"/>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:text="@string/back"
        android:background="@drawable/button_bg"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btnNext"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="@dimen/padding_small"
        android:layout_marginBottom="@dimen/padding_large"/>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:text="@string/next"
        android:background="@drawable/button_bg"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toRightOf="@id/btnBack"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="@dimen/padding_small"
        android:layout_marginBottom="@dimen/padding_large"/>

</androidx.constraintlayout.widget.ConstraintLayout>