<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:padding="@dimen/padding_large"
    android:background="@color/background_light">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/relative_layout"
        android:textSize="@dimen/text_size_large"
        android:textColor="@color/purple_500"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/padding_medium"/>

    <TextView
        android:id="@+id/tvNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textSize="@dimen/text_size_medium"
        android:layout_below="@id/tvTitle"
        android:layout_marginTop="@dimen/padding_medium"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_medium"
        android:layout_below="@id/tvTitle"
        android:layout_toRightOf="@id/tvNameLabel"
        android:layout_marginStart="@dimen/padding_medium"
        android:layout_marginTop="@dimen/padding_medium"/>

    <TextView
        android:id="@+id/tvEmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_email"
        android:textSize="@dimen/text_size_medium"
        android:layout_below="@id/tvNameLabel"
        android:layout_marginTop="@dimen/padding_small"/>

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_medium"
        android:layout_below="@id/tvName"
        android:layout_toRightOf="@id/tvEmailLabel"
        android:layout_marginStart="@dimen/padding_medium"
        android:layout_marginTop="@dimen/padding_small"/>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:text="@string/back"
        android:background="@drawable/button_bg"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/padding_small"/>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:text="@string/next"
        android:background="@drawable/button_bg"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/padding_small"/>

</RelativeLayout>