<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:background="@color/background_light">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frame_layout"
        android:textSize="@dimen/text_size_large"
        android:textColor="@color/purple_500"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/padding_medium"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="@dimen/padding_large">

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="@dimen/text_size_large"
            android:textColor="@color/purple_500"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/padding_large"/>

        <TextView
            android:id="@+id/tvDisplayName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_medium"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/padding_small"/>

        <TextView
            android:id="@+id/tvDisplayEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_medium"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:text="@string/back"
        android:background="@drawable/button_bg"
        android:textColor="@android:color/white"
        android:layout_gravity="bottom|start"
        android:layout_margin="@dimen/padding_medium"/>

</FrameLayout>